chore: make HomeSolutions a fully responsive flex box

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,10 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Import the Rubik font from Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
 
-/* Set Rubik as the primary font for the entire document */
 body {
   font-family: "Rubik", sans-serif;
 }
@@ -14,7 +12,6 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Define font styles for headings */
 h1,
 h2,
 h3,
@@ -22,51 +19,26 @@ h4,
 h5,
 h6 {
   font-family: "Rubik", sans-serif;
-  /* You can adjust font-weight and other styles as needed */
 }
 
-/* Customize other text elements as desired */
 p {
   font-family: "Rubik", sans-serif;
 }
 
 /* You can override the default Infima variables here. */
 :root {
-  --wopee-yellow: #ffcc00;
-  --wopee-purple: #7030a0;
   --ifm-color-primary: #7030a0;
-  --ifm-color-primary-dark: #ffb200;
-  --ifm-color-primary-darker: #ffa000;
-  --ifm-color-primary-darkest: #ff8800;
-  --ifm-color-primary-light: #ffdd33;
-  --ifm-color-primary-lighter: #ffe644;
-  --ifm-color-primary-lightest: #fff066;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-
-  /* Define secondary color and its alternatives */
-  --ifm-color-secondary: #ffcc00;
-  --ifm-color-secondary-dark: #5c2986;
-  --ifm-color-secondary-darker: #52257a;
-  --ifm-color-secondary-darkest: #451f6b;
-  --ifm-color-secondary-light: #803fbb;
-  --ifm-color-secondary-lighter: #8c4ac4;
-  --ifm-color-secondary-lightest: #9a57ce;
-}
-
-/* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme="dark"] {
-  --ifm-color-primary: #ffcc00;
   --ifm-color-primary-dark: #5c2986;
   --ifm-color-primary-darker: #52257a;
   --ifm-color-primary-darkest: #451f6b;
   --ifm-color-primary-light: #803fbb;
   --ifm-color-primary-lighter: #8c4ac4;
   --ifm-color-primary-lightest: #9a57ce;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
-  /* Use the secondary color and its alternatives in dark mode */
-  --ifm-color-secondary: #7030a0;
+  /* Define primary color and its alternatives */
+  --ifm-color-secondary: #ffcc00;
   --ifm-color-secondary-dark: #ffb200;
   --ifm-color-secondary-darker: #ffa000;
   --ifm-color-secondary-darkest: #ff8800;
@@ -75,36 +47,26 @@ p {
   --ifm-color-secondary-lightest: #fff066;
 }
 
-/* Define styles for the primary button */
-/* .primary-button {
-  background-color: var(--ifm-color-secondary);
-  color: #fff;
-  padding: 10px 15px;
-  border-radius: 5px;
-  text-decoration: none;
-  cursor: pointer;
-}
+/* For readability concerns, you should choose a lighter palette in dark mode. */
+[data-theme="dark"] {
+  --ifm-color-primary: #ffcc00;
+  --ifm-color-primary-dark: #ffb200;
+  --ifm-color-primary-darker: #ffa000;
+  --ifm-color-primary-darkest: #ff8800;
+  --ifm-color-primary-light: #ffdd33;
+  --ifm-color-primary-lighter: #ffe644;
+  --ifm-color-primary-lightest: #fff066;
 
-.primary-button:hover {
-  background-color: var(--ifm-color-secondary-light);
-  color: #fff;
-}
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 
-[data-theme="dark"] .primary-button {
-  color: var(--wopee-purple);
-}
-
-a.navbar__item.primary-button:hover {
-  color: #fff;
-}
-[data-theme="dark"] a.navbar__item.primary-button:hover {
-  color: var(--wopee-purple);
-} */
-
-.footer,
-.footer a {
-  background-color: var(--ifm-color-secondary);
-  color: #fff;
+  /* Use the secondary color and its alternatives in dark mode */
+  --ifm-color-secondary: #7030a0;
+  --ifm-color-secondary-dark: #5c2986;
+  --ifm-color-secondary-darker: #52257a;
+  --ifm-color-secondary-darkest: #451f6b;
+  --ifm-color-secondary-light: #803fbb;
+  --ifm-color-secondary-lighter: #8c4ac4;
+  --ifm-color-secondary-lightest: #9a57ce;
 }
 
 section {
@@ -112,74 +74,65 @@ section {
   scroll-margin-top: 40px;
 }
 
-/* Text element colors */
-.hero__title,
+/* Navbar Button */
+#navbar-button {
+  background-color: var(--ifm-color-primary);
+  color: var(--ifm-color-secondary);
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#navbar-button:hover {
+  background-color: var(--ifm-color-primary-light);
+}
+
+/* Hero section */
+
 .hero__subtitle {
   color: var(--ifm-navbar-link-color);
 }
 
-/* Buttons */
-#hero-button {
-  color: var(--ifm-color-primary);
-}
-
-#hero-button:hover {
-  background-color: var(--ifm-color-secondary-lighter);
-  color: var(--ifm-color-primary);
-}
-
+/* Navbar link settings */
 .navbar {
   height: 80px;
 }
 
-[data-theme="dark"] .navbar__logo img {
-  filter: invert(1);
+.navbar__item.navbar__link:hover {
+  color: var(--ifm-color-primary);
 }
 
 a.navbar__item:hover {
   color: var(--ifm-color-secondary);
 }
 
+/* This is done because active link will change color based on active, all #ids are on the same page - so all will be active at all times */
 .navbar__link--active {
-  color: var(--wopee-purple);
+  color: var(--unexisting-color);
 }
 
 [data-theme="dark"] .navbar__link--active {
-  color: var(--wopee-yellow);
+  color: var(--unexisting-color);
 }
 
-.sectionAlt {
-  background-color: var(--ifm-color-emphasis-100);
+/* Wopee logo invert on theme change */
+[data-theme="dark"] .navbar__logo img {
+  filter: invert(1);
 }
 
-.hero .button {
+/* Footer */
+
+.footer {
+  background-color: var(--ifm-color-primary);
+  color: #fff;
+}
+
+[data-theme="dark"] .footer {
   background-color: var(--ifm-color-secondary);
   color: #fff;
 }
 
-.navbar .primary-button:hover {
-  color: var(--wopee-purple);
+.footer a {
+  color: white;
 }
-
-/* Positioning adjustments */
-.hero-left-block {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.how-it-works-image {
-  width: 100%; /* Set the width to 100% to ensure images fill their container */
-  max-width: 100%; /* Limit the maximum width to the container width */
-  height: auto; /* Maintain the image's aspect ratio */
-}
-
-/*.card-container {
-  display: flex;
-  justify-content: space-between; 
-}
-
-.card {
-  flex: 1;
-}
-*/
