--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Gruppo&family=Rubik:ital,wght@0,400;0,800;1,400;1,800&display=swap');
 
 body {
   font-family: "Rubik", sans-serif;
@@ -23,6 +23,10 @@ h6 {
 
 p {
   font-family: "Rubik", sans-serif;
+}
+
+em {
+  font-weight: 800;
 }
 
 /* You can override the default Infima variables here. */
@@ -143,4 +147,14 @@ a.navbar__item:hover {
 
 .footer a:hover {
   color: white;
+}
+
+.wopee-io::first-letter {
+  font-family: Bungee;
+}
+
+.wopee-io {
+  font-family: Rubik;
+  font-weight: 800;
+  display:inline-block;
 }
