--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -10,8 +10,7 @@ html {
 }
 
 section {
-  padding: 50px;
-  scroll-margin-top: 40px;
+  scroll-margin-top: 80px;
 }
 
 /* Font setup */
@@ -26,6 +25,7 @@ h4,
 h5,
 h6 {
   font-family: "Rubik", sans-serif;
+  margin: 0;
 }
 
 h2 {
@@ -35,6 +35,7 @@ h2 {
 
 p {
   font-family: "Rubik", sans-serif;
+  margin: 0;
 }
 
 em {
