refactor: add conversion form to the end of the landing page
move team section into separate page and refactor the code
add logos of customers on book demo page

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -157,7 +157,7 @@ a.navbar__item:hover {
 }
 
 [data-theme="dark"] .footer {
-  background-color: var(--ifm-color-secondary);
+  background-color: black;
   color: #fff;
 }
 
