fix: apply SEO optimization adjustments

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,10 +29,10 @@ h6 {
   margin: 0;
 }
 
-h2 {
+/* h2 {
   font-family: "Gruppo", sans-serif;
   text-align: center;
-}
+} */
 
 p {
   font-family: "Rubik", sans-serif;
